refactor: update main content structure and styles across multiple pages

--- a/about.html
+++ b/about.html
@@ -32,17 +32,17 @@
         </section>
       </header>
 
-      <main>
+      <main class="main-content">
         <section>
           <h2>About us</h2>
-          <article>
+          <p>
             Created for the Introduction to Computing course, ImagiCore is an
             innovative platform that allows you to turn your ideas into
             high-quality images in just seconds. With a simple and intuitive
             design, our goal is to democratize digital image creation, making
             the process fast and accessible to everyone, from professional
             designers to beginners as well.
-          </article>
+          </p>
         </section>
 
         <section>
