--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
       </header>
 
-      <main>
+      <main class="main-content">
         <h3>Features</h3>
         <table border="1">
           <tr>
