--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         </section>
       </header>
 
-      <main>
+      <main class="main-content">
         <section>
           <h2>Contact us</h2>
           <form>
