--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
         </section>
       </header>
 
-      <main>
+      <main class="main-content">
         <section>
           <h2>Gallery</h2>
           <table border="1">
