--- a/generate.html
+++ b/generate.html
@@ -32,7 +32,7 @@
         </section>
       </header>
 
-      <main>
+      <main class="main-content">
         <section>
           <h2>Image Generator</h2>
         </section>
