refactor!: final delivery

--- a/galeria.html
+++ b/galeria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Gallery</title>
+    <title>ImagiCore</title>
   </head>
 
   <body>
@@ -17,16 +17,16 @@
         <section class="header-container">
           <div class="logo">
             <h1 id="text-logo">ImagiCore</h1>
-            <p>Turn ideas into images. Instantly.</p>
+            <p>Transforme ideias em imagens. Simples assim.</p>
           </div>
 
           <nav class="nav-wrapper">
             <ul class="nav-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="generate.html">Generate</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Início</a></li>
+              <li><a href="sobre.html">Sobre</a></li>
+              <li><a href="galeria.html">Galeria</a></li>
+              <li><a href="gerar.html">Gerar Imagem</a></li>
+              <li><a href="contato.html">Contato</a></li>
             </ul>
           </nav>
         </section>
@@ -67,7 +67,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2025 ImagiCore. All rights reserved.</p>
+      <p>&copy; 2025 ImagiCore. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
