--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./stylesheet/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
@@ -17,46 +17,53 @@
         <section class="header-container">
           <div class="logo">
             <h1 id="text-logo">ImagiCore</h1>
-            <p>Turn ideas into images. Instantly.</p>
+            <p>Transforme ideias em imagens. Simples assim.</p>
           </div>
 
-          <nav class="nav-wrapper">
+          <nav class="nav-wrapper" aria-label="Menu principal">
             <ul class="nav-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="generate.html">Generate</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Início</a></li>
+              <li><a href="sobre.html">Sobre</a></li>
+              <li><a href="galeria.html">Galeria</a></li>
+              <li><a href="gerar.html">Gerar Imagem</a></li>
+              <li><a href="contato.html">Contato</a></li>
             </ul>
           </nav>
         </section>
       </header>
 
       <main class="main-content">
-        <h3>Features</h3>
-        <table border="1">
-          <tr>
-            <th>Functionality</th>
-            <th>Description</th>
-          </tr>
-          <tr>
-            <td>Image generator</td>
-            <td>Image creation with AI based on text descriptions</td>
-          </tr>
-          <tr>
-            <td>Gallery</td>
-            <td>View already generated images</td>
-          </tr>
-          <tr>
-            <td>Contact us</td>
-            <td>Send suggestions or questions</td>
-          </tr>
+        <h2>Bem-vindo ao ImagiCore</h2>
+        <img src="https://picsum.photos/600/300" alt="Imagem representativa do projeto" />
+
+        <h3>Funcionalidades do Site</h3>
+        <table>
+          <thead>
+            <tr>
+              <th>Funcionalidade</th>
+              <th>Descrição</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Gerar imagens</td>
+              <td>Criação de imagens com IA com base em descrições textuais</td>
+            </tr>
+            <tr>
+              <td>Galeria</td>
+              <td>Exibe imagens já geradas</td>
+            </tr>
+            <tr>
+              <td>Contato</td>
+              <td>Envie sugestões ou dúvidas</td>
+            </tr>
+          </tbody>
         </table>
       </main>
     </div>
 
     <footer>
-      <p>&copy; 2025 ImagiCore. All rights reserved.</p>
+      <p>&copy; 2025 ImagiCore. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
